--- a/stat184syllabus.html
+++ b/stat184syllabus.html
@@ -72,7 +72,7 @@
                 </p>
                 <p style="text-align: right;"><a href="#topLinks" class="bodylinks">Return to top</a></p>
                 <h2 id="meetingInfo">When does this class meet? (Course Meeting Info)</h2>
-                <p>Our class (Sec. 1) meets twice a week, each week of the semester.</p>
+                <p>Our class (Sec. 1) meets twice a week, each week of the semester, in person.</p>
                 <ul>
                     <li><strong>Location:</strong> Huck Life Sciences Building, Room 004</li>
                     <li><strong>Time:</strong> Wednesdays and Fridays, 10:10am to 11:00am (ET)</li>
@@ -89,7 +89,7 @@
                     Thomas 425A. I have an open door policy.
                 </p>
                 <p>As the semester gets underway, I will announce when I have Student Hours scheduled for
-                    this course.
+                    this course. Student Hours will be held either in Thomas 424/425 or Thomas 425A.
                 </p>
                 <p style="text-align: right;"><a href="#topLinks" class="bodylinks">Return to top</a></p>
                 <h2 id="courseMaterials">What materials do I need for the class? (Course Materials)</h2>
@@ -130,11 +130,23 @@
                 <h2 id="goalsObjectives">What will I learn in this class? (Course Goals and Objectives)</h2>
                 <h3>Course Goals</h3>
                 <p>
-                    <mark>TBA</mark>
+                    The overarching goals for this course are to provide students with opportuntities and experiences
+                    with statistical software so that they may develop their programing skills, capabilities to use
+                    software in data analysis, and productive ways of thinking for data analysis and problem solving.
                 </p>
                 <h3>Learning Objectives</h3>
+                <ul>
+                    <li>Students will develop their ability to create reproducible code that others can understand.</li>
+                    <li>Students will develop their skills in programming with statistical software.</li>
+                    <li>Students will develop their skills in using statistical software to engage in data analysis.
+                    </li>
+                    <li>Students will develop their skills in collaborative programming.</li>
+                    <li>Students will develop ways of thinking which make use of computing power.</li>
+                </ul>
+                <h3>Learning Outcomes</h3>
                 <p>
-                    <mark>TBA</mark>
+                    You can view the current learning outcomes (and objectives) by checking out the Progress Checker app
+                    I've created (link in Canvas) or by viewing them through this shared document. (Link coming soon)
                 </p>
                 <p style="text-align: right;"><a href="#topLinks" class="bodylinks">Return to top</a></p>
                 <h2 id="responsibilities">What Are Our Responsibilities? (Teacher and Student Responsibilities)</h2>
@@ -143,16 +155,16 @@
                 <ol>
                     <li>
                         <strong>Speak with Meaning:</strong> Everything that a person says should carry meaning to
-                        others. Each of us need to do our best to avoid vague phrases and pronouns without clear
+                        others. Each of us needs to do our best to avoid vague phrases and pronouns without clear
                         antecedents (i.e., what the pronoun refers to). Explain and justify your reasoning, statements,
                         arguments, etc.
                     </li>
                     <li>
                         <strong>Exhibit Intellectural Integrity:</strong> Base your statements on what you understand
-                        and what you're still wrestling with. Avoid making statements that reflect what you believe are
-                        what someone else wants to hear. Each of us should feel empowered to express your confusion
-                        and/or struggles with the material. This will help make the class much more productive for
-                        everyone.
+                        and what you're still wrestling with. There is courage and power in admitting to where you
+                        struggling. Avoid making statements that reflect what you believe are what someone else wants to
+                        hear. Each of us should feel empowered to express your confusion and/or struggles with the
+                        material. This will help make the class much more productive for everyone.
                     </li>
                     <li>
                         <strong>Strive to Make Sense:</strong> There are underlying threads of coherence between various
@@ -250,7 +262,7 @@
                 <p><mark>TBA</mark></p>
                 <p style="text-align: right;"><a href="#topLinks" class="bodylinks">Return to top</a></p>
                 <h2 id="calendar">What's the Course Schedule Look Like? (Tentative Course Calendar)</h2>
-                <p>Coming soon</p>
+                <p><mark>Link Coming soon</mark></p>
                 <p style="text-align: right;"><a href="#topLinks" class="bodylinks">Return to top</a></p>
                 <h2 id="inclusion">Is Our Class Inclusive? YES! (Inclusive Practices)</h2>
                 <p>
@@ -463,12 +475,14 @@
                 <p style="text-align: right;"><a href="#topLinks" class="bodylinks">Return to top</a></p>
                 <h2 id="misc">Additional Information</h2>
                 <h3>Instructor Absence</h3>
-                <p>In the event that one of the instructors is not able to attend class, the other instructor will hold
-                    class. In the event that both instructors are unable to attend, we will either arrange for a guest
-                    speaker/instructor (a substitute), for work time (independent or in groups), or cancel the session.
-                    Such information will be announced as needed via PSU email/Canvas.
+                <p>
+                    In the event that I'm not able to attend class, I will send out an annoucement for what the plan
+                    will
+                    be. This may include having a guest speaker/instructor (a substitute), for work time (independent or
+                    in groups), or cancel the session. Such information will be announced as needed via PSU
+                    email/Canvas.
                 </p>
-                <h3>Syllabus Policy</h3>
+                <h3>Syllabus Changes</h3>
                 <p>
                     The syllabus for this course (and all other course syllabi) <em>does not</em> constitute a
                     legal contract. Further, I intend for this syllabus to change to reflect the decisions we
