--- a/stat592syllabus.html
+++ b/stat592syllabus.html
@@ -83,7 +83,7 @@
                     Thomas 425A. I have an open door policy.
                 </p>
                 <p>As the semester gets underway, I will announce when I have Student Hours scheduled for
-                    this course.
+                    this course. Student Hours will be held either in Thomas 424/425 or Thomas 425A.
                 </p>
                 <p style="text-align: right;"><a href="#topLinks" class="bodylinks">Return to top</a></p>
                 <h2 id="courseMaterials">Course Materials</h2>
@@ -109,8 +109,7 @@
                         Instruction in Statistics Education (GAISE) 2016 college report.
                     </li>
                     <li>Students will develop their ability to de-center and think about potential student thinking
-                        which
-                        might underpin student responses.
+                        which might underpin student responses.
                     </li>
                     <li>Students will develop their own arsenal of pedagogical tools (e.g., active learning techniques,
                         questioning strategies, assessments) that they can incorporate into their teaching.
@@ -172,8 +171,7 @@
                 </p>
                 <p>
                     Students who are absent three or more times throughout the semester may receive a failing grade for
-                    the
-                    course. (Note: Three abscences is equivalent to missing 20% of the course.)
+                    the course. (Note: Three abscences is equivalent to missing 20% of the course.)
                 </p>
                 <h4>Participation</h4>
                 <p>Given that this course is primarily discussion based, your participation is absolutely necessary.
@@ -505,7 +503,8 @@
                 <p style="text-align: right;"><a href="#topLinks" class="bodylinks">Return to top</a></p>
                 <h2 id="misc">Additional Information</h2>
                 <h3>Instructor Absence</h3>
-                <p>In the event that I'm not able to attend class, I will send out an annoucement for what the plan will
+                <p>
+                    In the event that I'm not able to attend class, I will send out an annoucement for what the plan will
                     be. This may include having a guest speaker/instructor (a substitute), for work time (independent or
                     in groups), or cancel the session. Such information will be announced as needed via PSU
                     email/Canvas.
