--- a/stat184syllabus.html
+++ b/stat184syllabus.html
@@ -66,8 +66,8 @@
                 </p>
                 <p>
                     In essence, STAT184 is an opportunity for students majoring in Statistics and Data Science to gain
-                    familiarity with the statistical programing language R. Further, this class provides you an
-                    opportunity to develop ways of thinking that will assist you in using R (or another programing
+                    familiarity with the statistical programming language R. Further, this class provides you an
+                    opportunity to develop ways of thinking that will assist you in using R (or another programming
                     language) to carry out statistical analysis and communicate your findings.
                 </p>
                 <p style="text-align: right;"><a href="#topLinks" class="bodylinks">Return to top</a></p>
@@ -131,7 +131,7 @@
                 <h3>Course Goals</h3>
                 <p>
                     The overarching goals for this course are to provide students with opportuntities and experiences
-                    with statistical software so that they may develop their programing skills, capabilities to use
+                    with statistical software so that they may develop their programming skills, capabilities to use
                     software in data analysis, and productive ways of thinking for data analysis and problem solving.
                 </p>
                 <h3>Learning Objectives</h3>
@@ -146,7 +146,10 @@
                 <h3>Learning Outcomes</h3>
                 <p>
                     You can view the current learning outcomes (and objectives) by checking out the Progress Checker app
-                    I've created (link in Canvas) or by viewing them through this shared document. (Link coming soon)
+                    I've created (link in Canvas) or by viewing them through this shared document <a class="bodylinks"
+                        target="_blank"
+                        href="https://www.dropbox.com/s/p980ou4j904h75k/Stat184LearningOutcomes.pdf?dl=0">Stat 184
+                        Learning Outcomes PDF</a>.
                 </p>
                 <p style="text-align: right;"><a href="#topLinks" class="bodylinks">Return to top</a></p>
                 <h2 id="responsibilities">What Are Our Responsibilities? (Teacher and Student Responsibilities)</h2>
@@ -477,10 +480,9 @@
                 <h3>Instructor Absence</h3>
                 <p>
                     In the event that I'm not able to attend class, I will send out an annoucement for what the plan
-                    will
-                    be. This may include having a guest speaker/instructor (a substitute), for work time (independent or
-                    in groups), or cancel the session. Such information will be announced as needed via PSU
-                    email/Canvas.
+                    will be. This may include having a guest speaker/instructor (a substitute), for work time
+                    (independent or in groups), or cancel the session. Such information will be announced as needed via
+                    PSU email/Canvas.
                 </p>
                 <h3>Syllabus Changes</h3>
                 <p>
