--- a/syllabusStat461.html
+++ b/syllabusStat461.html
@@ -177,15 +177,11 @@
                     <div class="collapsible-content">
                         <div class="content-inner">
                             <p>
-                                I have prepared a <em>very tentative</em> course schedule based upon past semesters. I
-                                will be updating this schedule based upon feedback from the class.
+                                I have prepared a <em>very tentative</em> course schedule based upon past semesters.
                             </p>
                             <p>
-                                <a href="https://www.dropbox.com/s/88oisvjol2s7wso/tentativeSchedule.STAT461.SP2022.pdf?dl=0"
-                                    class="bodylinks">Spring 2022 Schedule</a>
-                            </p>
-                            <p>
-                                <mark>Fall 2022 Tentative Schedule Coming Soon</mark>
+                                <a href="https://www.dropbox.com/s/ig26edp3zetc8lk/Fall2022Schedule_stat461.pdf?dl=0"
+                                    class="bodylinks" target="_blank">Fall 2022 Schedule</a>
                             </p>
                         </div>
                     </div>
@@ -197,21 +193,15 @@
                     <div class="collapsible-content">
                         <div class="content-inner">
                             <p>I intend for this class to find a balance between the two aspects: Applications and
-                                Theory.
-                                To this end, we will be making use of some programming so that you can successfully
-                                leverage
-                                computers to carry out the computational work needed in developing your skills and
-                                applying
-                                your new knowledge. <br> <br>
+                                Theory. To this end, we will be making use of some programming so that you can
+                                successfully leverage computers to carry out the computational work needed in developing
+                                your skills and applying your new knowledge. <br> <br>
                                 I've often found that when students mention "theory" they have in mind proofs, intensive
-                                work
-                                with calculus and linear algebra, and having to provide derivations. While these things
-                                are one
-                                part of the Theory side of thing, they aren't all of Theory. In particular, our "Theory"
-                                aspects
-                                will center on developing the Ways of Thinking that will help you to ask productive
-                                questions, look
-                                for answers to those questions, and ultimately make decisions in applied settings.
+                                work with calculus and linear algebra, and having to provide derivations. While these
+                                things are one part of the Theory side of thing, they aren't all of Theory. In
+                                particular, our "Theory" aspects will center on developing the Ways of Thinking that
+                                will help you to ask productive questions, look for answers to those questions, and
+                                ultimately make decisions in applied settings.
                             </p>
                         </div>
                     </div>
@@ -263,10 +253,8 @@
                         <div class="content-inner">
                             <p>
                                 If you need to get ahold of me outside of class, you can send me a message via Canvas,
-                                send
-                                me an email through Penn State email, start a chat with me in Microsoft Teams, or stop
-                                by my
-                                office (425A Thomas). <br>
+                                send me an email through Penn State email, start a chat with me in Microsoft Teams, or
+                                stop by my office (425A Thomas). <br>
                                 You can also call my office phone: (814) 863-7664.</p>
                         </div>
                     </div>
@@ -398,8 +386,7 @@
                         <div class="content-inner">
                             <p>
                                 You will need at least one statistical software packages such as R, SAS, SPSS, JMP,
-                                Minitab
-                                for this class. The choice is up to you and your own personal learning goals.
+                                Minitab for this class. The choice is up to you and your own personal learning goals.
                                 However, please keep in mind that I will only be demonstrating the usage of R.
                                 My materials are set for R (including example code). If you opt to use another
                                 software package, please let me know as soon as possible. I will do my best to find
@@ -678,9 +665,8 @@
                                 objectives. To view the full list of learning outcomes, organized by course objective,
                                 please see the following PDF.</p>
                             <p>
-                                <mark>TBA</mark>
-                                <a href="https://www.dropbox.com/s/ihtjnkcphq5pv3q/stat461_LearningOutcomes.pdf?dl=0"
-                                    target="_blank" , class="bodylinks">Spring 2021 STAT 461 Learning Outcomes</a>
+                                <a href="https://www.dropbox.com/s/rybsqgugzsf23v8/STAT461_LearningOutcomes.pdf?dl=0"
+                                    target="_blank" , class="bodylinks">Fall 2022 STAT 461 Learning Outcomes</a>
                             </p>
                         </div>
                     </div>
@@ -1013,8 +999,7 @@
                         <div class="collapsible-content">
                             <div class="content-inner">
                                 <p>When a class of mine is scheduled to meet via Zoom or another remote meeting
-                                    technology,
-                                    there are certain things that I do expect from each student.</p>
+                                    technology, there are certain things that I do expect from each student.</p>
                                 <ol type="1">
                                     <li>I expect you to log into Zoom for each class just as you would attend each class
                                         in person.</li>
