Fixed Spelling Typo

--- a/stat461syllabus.html
+++ b/stat461syllabus.html
@@ -688,7 +688,7 @@
                                         and justify your reasoning, statements, arguments, etc.
                                     </li>
                                     <li>
-                                        <strong>Exhibit Intellectural Integrity:</strong> Base your statements on what
+                                        <strong>Exhibit Intellectual Integrity:</strong> Base your statements on what
                                         you understand and what you're still wrestling with. There is courage and power
                                         in admitting to where you struggling. Avoid making statements that reflect what
                                         you believe are what someone else wants to hear. Each of us should feel
