--- a/stat184syllabus.html
+++ b/stat184syllabus.html
@@ -163,7 +163,7 @@
                         arguments, etc.
                     </li>
                     <li>
-                        <strong>Exhibit Intellectural Integrity:</strong> Base your statements on what you understand
+                        <strong>Exhibit Intellectual Integrity:</strong> Base your statements on what you understand
                         and what you're still wrestling with. There is courage and power in admitting to where you
                         struggling. Avoid making statements that reflect what you believe are what someone else wants to
                         hear. Each of us should feel empowered to express your confusion and/or struggles with the
