Further Typo Fixes

--- a/stat592syllabus.html
+++ b/stat592syllabus.html
@@ -131,7 +131,7 @@
                     </li>
                     <li>
                         <strong>Exhibit Intellectual Integrity:</strong> Base your statements on what you understand
-                        and what you're still wrestling with. There is courage and power in admitting to where you
+                        and what you're still wrestling with. There is courage and power in admitting to where you are
                         struggling. Avoid making statements that reflect what you believe are what someone else wants to
                         hear. Each of us should feel empowered to express your confusion and/or struggles with the
                         material. This will help make the class much more productive for everyone.
