--- a/stat184syllabus.html
+++ b/stat184syllabus.html
@@ -265,7 +265,9 @@
                 <p><mark>TBA</mark></p>
                 <p style="text-align: right;"><a href="#topLinks" class="bodylinks">Return to top</a></p>
                 <h2 id="calendar">What's the Course Schedule Look Like? (Tentative Course Calendar)</h2>
-                <p><mark>Link Coming soon</mark></p>
+                <p>You can check out the <em>tenative</em> course schedule: <a class="bodylinks" target="_blank"
+                        href="https://www.dropbox.com/s/k6f5lzrp49n5fsw/Fall2022Schedule_stat184.pdf?dl=0">Fall 2022
+                        Stat 184 Schedule</a></p>
                 <p style="text-align: right;"><a href="#topLinks" class="bodylinks">Return to top</a></p>
                 <h2 id="inclusion">Is Our Class Inclusive? YES! (Inclusive Practices)</h2>
                 <p>
