--- a/stat184syllabus.html
+++ b/stat184syllabus.html
@@ -94,6 +94,13 @@
                 <p style="text-align: right;"><a href="#topLinks" class="bodylinks">Return to top</a></p>
                 <h2 id="courseMaterials">What materials do I need for the class? (Course Materials)</h2>
                 <p>
+                    In terms of textbooks, we will draw from a variety of sources which will be posted in Canvas. We
+                    will draw from <a class="bodylinks" target="_blank"
+                        href="https://dtkaplan.github.io/DataComputingEbook/">Computing (2nd Edition) by Daniel Kaplan &
+                        Matthew Beckman</a>, which is a free e-book for a number of readings. I will try to post
+                    additional books, references, and potentially helpful material as the semester progresses.
+                </p>
+                <p>
                     As a technolgy based course, you will need access to the following:
                 </p>
                 <ul>
